js using add to cart

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 </head>
 <body>
 
+<div class="menu-sec">
+    <div class="container">
+        <div class="title d-flex justify-content-between align-items-center pt-3 pb-3">
+            <h4>Easy Shopping</h4>
+            <button id="cart"><i class="icofont-cart-alt"></i></button>
+        </div>
+    </div>
+</div>
+
 <div class="cart">
     <div class="container">
-        <div class="title d-flex justify-content-between">
-            <h4>Easy Shopping</h4>
-            <button id="cart">Cart</button>
-        </div>
+        
         <div class="row">
             <div class="col-6">
                 <label for="">Electronics ;</label>
@@ -25,7 +31,7 @@
                     <option value="headphones">Headphones</option>
                     <option value="laptop">Laptop</option>
                 </select>
-                <button id="search">search</button>
+                <button class="" id="search">search</button>
             </div>
         </div>
     </div>
